--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -72,12 +72,74 @@
 
 .footer {
   background-color: $secondary-black;
+  color: $white;
+  position: relative;
+
+ &__content{
+  padding-bottom: 60px;
+  }
+
+  &__menu,
+  &__info,
+  &__social{
+    gap: 25px;
+  }
+
+  &__container{
+    gap: 99px;
+    padding-top: 58px;
+  }
+
+  &__menu__title,
+  &__info-title,
+  &__social-title{
+    font-size: 16px;
+  }
+
+  &__menu__list{
+    gap: 16px;
+  }
+
+  &__menu__list-link{
+    font-size: 14px;
+    color: $white;
+  }
+
+  &__info{
+    padding-left: 157px;
+    max-width: 400px;
+  }
+  &__info-list{
+    gap: 30px;
+  }
+
+  &__info-item{
+    gap: 19px;
+    font-size: 14px;
+  }
+
+  &__social{
+    padding-left: 70px;
+  }
+
+  &__social-img{
+    gap: 40px;
+  }
+
+  &__copyright{
+    margin: 24px auto;
+  }
+
+  &__copyright::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: $primary-color;
+    top: 83%;
+    left: 0;
+  }
 }
 
-.footer__container {
-  gap: 99px;
-}
-.logo-white {
-  padding: 58px 0;
-  display: flex;
-}
+
+
