implement hero section

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,4 +1,6 @@
 $primary-color:#BDBDBD;
+$primary-gray:#F2F2F2;
 $secondary-color: #333333;
 $secondary-black: #2C2C2C;
 $white: #FFFFFF;
+$light-gray: #F9F9F9;
