add some images in section

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,6 +2,7 @@ $tt-hoves: 'TT Hoves', sans-serif;
 $primary-color:#BDBDBD;
 $primary-gray:#F2F2F2;
 $secondary-color: #333333;
+$secondary-transperent: rgba(51, 51, 51, 0.8);
 $secondary-black: #2C2C2C;
 $white: #FFFFFF;
 $light-gray: #F9F9F9;
