style contact-us form

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -7,3 +7,6 @@ $secondary-black: #2C2C2C;
 $white: #FFFFFF;
 $light-gray: #F9F9F9;
 $light-gray-bg: #FBFBFB;
+$inputs-gray: #8D8D8D;
+$required-red: #C30000;
+$check-gray: #F3F3F3;
