--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -414,13 +414,113 @@ body {
 .contact__us {
   margin-top: 120px;
 
-  &-form{
-    gap: 30px;
+  &-title{
+    font-size: 64px;
+    font-weight: 100;
+    color: $primary-color;
+    line-height: 64px;
+    padding-bottom: 22px;
   }
 
-  &-form-items{
+  &-form{
+    gap: 30px;
+    padding-bottom: 98px;
+  }
+
+  &-items{
     gap: 10px;
+    width: 391px;
+  }
+
+  &-form-style{
+    outline: none;
+    border: none;
+    background-color: $primary-gray;
+    resize: none;
+    width: 100%;
+    padding: 14px 0 14px 21px;
+    font-size: 14px;
+    letter-spacing: 1px;
+    font-weight: 400;
   }
 }
 
+.place_holder {
+  z-index: 100;    
+  left: 0;
+  cursor: text;   
+  position: absolute;
+  width: 100%;    
+  display: none;
+  color: $inputs-gray;
+  padding: 14px 0 14px 21px;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
 
+.required-field input:invalid + .place_holder {
+  display: inline;
+}
+
+.required-field { 
+  position: relative;
+  overflow: hidden;
+}
+
+.place_holder span {
+  color: $required-red;
+}
+
+.required-field textarea + .place_holder {
+  display: inline;
+}
+
+.required-field > textarea {
+  height: 147px;
+}
+
+.select__check{
+  display: none;
+}
+
+.check__term{
+  padding-left: 40px;
+  position: relative;
+  font-size: 14px;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.check__term::before{
+  content: '';
+  position: absolute;
+  background-color: $check-gray;
+  width: 24px;
+  height: 24px;
+  top: 0;
+  left: 0;
+}
+.checked-icon{
+  position: absolute;
+  top: 7px;
+  left: 5px;
+  opacity: 0;
+  transition: opacity 300ms;
+}
+.select__check:checked ~ .check__term .checked-icon{
+  opacity: 1;
+}
+
+.send-sumbit__form {
+  margin-top: 21px;
+  gap: 15px;
+  padding: 24px 47px;
+  border: none;
+  background-color: $secondary-color;
+  color: $white;
+  letter-spacing: 2.4px;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
+}
