--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "_vars.scss";
 @import "_fonts.scss";
 
+
 body {
   font-family: $tt-hoves;;
 }
@@ -207,6 +208,17 @@ body {
     border: none;
     background-color: $white;
     cursor: pointer;
+    transition: $secondary-color .3s ease-in-out, box-shadow .3s ease-in-out;
+    box-shadow: inset 0 0 0 0 $secondary-color;
+  }
+
+  &__slider-btn:hover{
+    color: #fff;
+    box-shadow: inset 222px 0 0 0 $secondary-color;
+  }
+
+  &__slider-btn >img:hover{
+    color: #fff;
   }
 
   &__slider-btn > span {
@@ -524,3 +536,5 @@ body {
   font-weight: 400;
   cursor: pointer;
 }
+
+@import "_media.scss";
