implement js file and add some animation

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,3 +10,7 @@ $light-gray-bg: #FBFBFB;
 $inputs-gray: #8D8D8D;
 $required-red: #C30000;
 $check-gray: #F3F3F3;
+
+$bg-image-zindex: -1;
+$placeholder-zindex: 2;
+$menu-zindex: 3;
