--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -4,9 +4,24 @@
         margin: 0 auto;
     }
 
+    .logo {
+        padding: 15px 0 15px 20px;
+    }
+
+   .menu{
+    padding: 30px 0;
+
+    &__list{
+        gap: 42px;
+    }
+   }
+
 }
 
 @media screen and (max-width: 768px) {
+    body.lock{
+        overflow: hidden;
+    }
     .container {
         max-width: 690px;
         margin: 0 auto;
@@ -49,6 +64,7 @@
             width: 100%;
             height: 2px;
             left: 0;
+            transition: all 0.3s ease 0s;
         }
 
         &__burger::before{
@@ -64,6 +80,19 @@
             height: 2px;
             width: 100%;
             top: 9px;
+            transition: all 0.3s ease 0s;
+        }
+
+        &__burger.active::before{
+            transform: rotate(45deg);
+            top: 9px;
+        }
+        &__burger.active::after{
+            transform: rotate(-45deg);
+            bottom: 9px;
+        }
+        &__burger.active span {
+            transform: scale(0);
         }
         
     }
@@ -75,13 +104,18 @@
 
     .menu {
         position: fixed;
-        top: 0;
+        top: -100%;
         left: 0;
         width: 100%;
         height: 100%;
+        overflow: auto;
         background-color: aqua;
         padding: 150px 0 0 0;
+        transition: all 0.3s ease 0s;
 
+        &.active{
+            top: 0;
+        }
         &__list{
             position: relative;
             z-index: 2;
