--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -214,17 +214,6 @@ body {
     border: none;
     background-color: $white;
     cursor: pointer;
-    transition: $secondary-color .3s ease-in-out, box-shadow .3s ease-in-out;
-    box-shadow: inset 0 0 0 0 $secondary-color;
-  }
-
-  &__slider-btn:hover{
-    color: #fff;
-    box-shadow: inset 222px 0 0 0 $secondary-color;
-  }
-
-  &__slider-btn >img:hover{
-    color: #fff;
   }
 
   &__slider-btn > span {
@@ -237,8 +226,11 @@ body {
   margin-top: 120px;
   padding-bottom: 150px;
 
-  &__background{
-    height: 435px;
+  &__company::before{
+    content: '';
+    height: calc(100% - 30px);
+    top: 0;
+    left: 0;
     background-color: $light-gray-bg;
     width: 100%;
     z-index: -1;
