implement animation and slider

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,9 +2,11 @@ $tt-hoves: 'TT Hoves', sans-serif;
 $primary-color:#BDBDBD;
 $primary-gray:#F2F2F2;
 $secondary-color: #333333;
+$hover-gray: #404040;
 $secondary-transperent: rgba(51, 51, 51, 0.8);
 $secondary-black: #2C2C2C;
 $white: #FFFFFF;
+$hover-white:  #f2f2f2;
 $light-gray: #F9F9F9;
 $light-gray-bg: #FBFBFB;
 $inputs-gray: #8D8D8D;
