--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -178,16 +178,18 @@ body {
     padding: 15px 13px;
     cursor: pointer;
     border: 1px solid $primary-gray;
-  }
-
-  &__btn-back{
     background-color: $white;
   }
 
-  &__btn-forward{
+  &__btn-back:hover,
+  &__btn-forward:hover{
     background-color: $light-gray;
+  }
+
+  &__btn-forward{
     margin-left: 23px;
   }
+
   &__btn-line{
     width: 100%;
     height: 1px;
@@ -206,6 +208,21 @@ body {
     width: 770px;
   }
 
+  .slider{
+    display: none;
+   
+    &--active{
+      display: block;
+      animation-name: fade-in;
+      animation-duration: 2s;
+      animation-iteration-count: 1;
+      animation-direction: normal;
+      animation-timing-function: ease-out;
+      animation-fill-mode: forwards;
+      animation-delay: 0s;
+    }
+  }
+
   &__slider-btn{
     gap: 12px;
     position: absolute;
@@ -214,11 +231,35 @@ body {
     border: none;
     background-color: $white;
     cursor: pointer;
+
+    &:hover{
+      background-color: $hover-white;
+    }
+  
+    & > img{
+      animation-duration: 0.5s;
+    }
+    &:hover > img{
+      animation-name: move-arrow;
+    }
   }
 
   &__slider-btn > span {
     letter-spacing: 2.4px;
     font-size: 12px;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    display: block;
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    display: block;
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -270,6 +311,16 @@ body {
     cursor: pointer;
     line-height: 12px;
     letter-spacing: 1.2px;
+    &:hover{
+      background-color: $hover-white;
+    }
+  
+    & > img{
+      animation-duration: 0.5s;
+    }
+    &:hover > img{
+      animation-name: move-arrow;
+    }
   }
 }
 
@@ -419,6 +470,29 @@ body {
   letter-spacing: 1.2px;
   line-height: 12px;
   font-weight: 400;
+
+  &:hover{
+    background-color: $hover-gray;
+  }
+
+  & > img{
+    animation-duration: 0.5s;
+  }
+  &:hover > img{
+    animation-name: move-arrow;
+  }
+}
+
+@keyframes move-arrow{
+  0%{
+    padding-left: 0;
+  }
+  50%{
+    padding-left: 5px;
+  }
+  100%{
+    padding-left: 0;
+  }
 }
 
 .contact__us {
@@ -533,6 +607,16 @@ body {
   font-size: 12px;
   font-weight: 400;
   cursor: pointer;
+  &:hover{
+    background-color: $hover-gray;
+  }
+
+  & > img{
+    animation-duration: 0.5s;
+  }
+  &:hover > img{
+    animation-name: move-arrow;
+  }
 }
 
 @import "_media.scss";
